--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                             class="generated-password"
                             placeholder="*your password here*"
                             spellcheck="false "
+                            autocomplete="off"
                         />
                     </label>
                 </div>
